--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
     <div id="contenedor">
 	        <div id="cabecera">
-			  <img src="IMAGENES2/Evaluacionparcial1_LEON LOPEZ ERICK CRISTIAN_DiseñoVectorialResultado.png" id="imglogo">
+			  <img src="Evaluacionparcial1_LEON LOPEZ ERICK CRISTIAN_DiseñoVectorialResultado.png" id="imglogo">
 			  <h1> STORE ONLINE </h1>
 			</div>
 	<div id="alinear">
@@ -34,8 +34,8 @@
 			    <div class="cuerpo">
 				<h3>BIENVENDO A LA TIENDA</h3>
 				<p> NUESTRA TIENDA CUENTA CON MAS DE 10 MILLONES DE VENTAS, TAMBIEN TENEMOS LA MEJOR VALORACION EN EL MERCADO, TODAS SUS COMPRAS CUENTAN CON ENVIO GRATIS APARTE CONTAMOS CON GARANTIA, ESPERAMOS SER DE SU AGRADO.</P>
-			    <a href="compras.html"><img src="IMAGENES2/imge1.jfif" class="imgclass1"></a> <br>
-		        <a href="compras.html"><img src="IMAGENES2/imge2.jfif" class="imgclass2"></a> <br>
+			    <a href="compras.html"><img src="imge1.jfif" class="imgclass1"></a> <br>
+		        <a href="compras.html"><img src="imge2.jfif" class="imgclass2"></a> <br>
 				<center>
 				<video src="VIDEOS/Sport Wear Campaign   videos de ropa deportiva   CAMPANA[1].mp4" controls></video> <br>
 				</center>
@@ -53,7 +53,7 @@
 	
 	<div class="pie"> STORE ONLINE México y Centroamérica ©2022 | Todos los derechos reservados <br>
 	Siguenos en nuestras redes sociales
-	<a href="https://www.facebook.com/"><img src="IMAGENES2/facebook.png" class="img class3"> <br>
-	<a href="https://twitter.com/i/flow/login"><img src="IMAGENES2/twitter.png" class="img class4"></div>
+	<a href="https://www.facebook.com/"><img src="facebook.png" class="img class3"> <br>
+	<a href="https://twitter.com/i/flow/login"><img src="twitter.png" class="img class4"></div>
 	</body>
 	</html>
