--- a/compras.html
+++ b/compras.html
@@ -15,7 +15,7 @@
 	
     <div id="contenedor">
 	        <div id="cabecera">
-			  <img src="IMAGENES2/Evaluacionparcial1_LEON LOPEZ ERICK CRISTIAN_DiseñoVectorialResultado.png" id="imglogo">
+			  <img src="IMG INDEX/Evaluacionparcial1_LEON LOPEZ ERICK CRISTIAN_DiseñoVectorialResultado.png" id="imglogo">
 			  <h1> STORE ONLINE </h1>
 			</div>
 	<div id="alinear">
@@ -43,23 +43,23 @@
 		 </tr>
 		 
 		 <tr>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/ninas/_Deal_moda2#deal_print_id=a8fe55e0-cf4b-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=1&c_campaign=NINAS_BANNER_KIDS&c_uid=a8fe55e0-cf4b-11ec-ad0d-91ecf90b8fab"><img src="IMAGENES2/NINA.jfif" class="imgtd1"> </td>
-         <td> <a href="https://ropa.mercadolibre.com.mx/hombre/_Tienda_wrangler-mexico#deal_print_id=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=2&c_campaign=WRANGLER&c_uid=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab"><img src="IMAGENES2/PLAYERAH.jfif"class="imgtd2"> </td>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/blusas/mujer/_Deal_moda2#deal_print_id=98c25720-cf4c-11ec-bdaa-1117cb48458a&c_id=special-withoutlabel&c_element_order=8&c_campaign=BLUSAS&c_uid=98c25720-cf4c-11ec-bdaa-1117cb48458a"><img src="IMAGENES2/PLAYERAM.jfif"class="imgtd3"> </td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/ninas/_Deal_moda2#deal_print_id=a8fe55e0-cf4b-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=1&c_campaign=NINAS_BANNER_KIDS&c_uid=a8fe55e0-cf4b-11ec-ad0d-91ecf90b8fab"><img src="COMPRAS/NINA.jfif" class="imgtd1"> </td>
+         <td> <a href="https://ropa.mercadolibre.com.mx/hombre/_Tienda_wrangler-mexico#deal_print_id=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=2&c_campaign=WRANGLER&c_uid=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab"><img src="COMPRAS/PLAYERAH.jfif"class="imgtd2"> </td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/blusas/mujer/_Deal_moda2#deal_print_id=98c25720-cf4c-11ec-bdaa-1117cb48458a&c_id=special-withoutlabel&c_element_order=8&c_campaign=BLUSAS&c_uid=98c25720-cf4c-11ec-bdaa-1117cb48458a"><img src="COMPRAS/PLAYERAM.jfif"class="imgtd3"> </td>
 		 
 		 </tr>
 		 
 		 <tr>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/ninos/_Deal_moda2#deal_print_id=fe7881d0-cf4b-11ec-bdaa-1117cb48458a&c_id=special-withoutlabel&c_element_order=2&c_campaign=NINOS_BANNER_KIDS&c_uid=fe7881d0-cf4b-11ec-bdaa-1117cb48458a"><img src="IMAGENES2/NINO.jfif" class="imgtd4"> </td>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/hombre/_Tienda_wrangler-mexico#deal_print_id=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=2&c_campaign=WRANGLER&c_uid=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab"><img src="IMAGENES2/PANTALONH.jfif"class="imgtd5"></td>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/bolsas-carteras/mujer/_Deal_moda2#deal_print_id=879f4930-cf4c-11ec-bdaa-1117cb48458a&c_id=special-withoutlabel&c_element_order=4&c_campaign=BOLSAS&c_uid=879f4930-cf4c-11ec-bdaa-1117cb48458a"><img src="IMAGENES2/BOLSOM.jfif"class="imgtd6"></td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/ninos/_Deal_moda2#deal_print_id=fe7881d0-cf4b-11ec-bdaa-1117cb48458a&c_id=special-withoutlabel&c_element_order=2&c_campaign=NINOS_BANNER_KIDS&c_uid=fe7881d0-cf4b-11ec-bdaa-1117cb48458a"><img src="COMPRAS/NINO.jfif" class="imgtd4"> </td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/hombre/_Tienda_wrangler-mexico#deal_print_id=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=2&c_campaign=WRANGLER&c_uid=380ccd70-cf4c-11ec-ad0d-91ecf90b8fab"><img src="COMPRAS/PANTALONH.jfif"class="imgtd5"></td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/bolsas-carteras/mujer/_Deal_moda2#deal_print_id=879f4930-cf4c-11ec-bdaa-1117cb48458a&c_id=special-withoutlabel&c_element_order=4&c_campaign=BOLSAS&c_uid=879f4930-cf4c-11ec-bdaa-1117cb48458a"><img src="COMPRAS/BOLSOM.jfif"class="imgtd6"></td>
 		 
 		 </tr>
 		 
 		 <tr>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/bebes/_Deal_moda2#deal_print_id=16e7d900-cf4c-11ec-9c2e-c9e45840fef3&c_id=special-withoutlabel&c_element_order=3&c_campaign=BEBES_BANNER_KIDS&c_uid=16e7d900-cf4c-11ec-9c2e-c9e45840fef3"><img src="IMAGENES2/BEBE.jfif" class="imgtd7"> </td>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/calzado-tenis/hombre/vans_Tienda_all_NoIndex_True#deal_print_id=58f4dff0-cf4c-11ec-9c2e-c9e45840fef3&c_id=special-withoutlabel&c_element_order=1&c_campaign=VANS&c_uid=58f4dff0-cf4c-11ec-9c2e-c9e45840fef3"><img src="IMAGENE2S/TENISH.jfif"class="imgtd8"></td>
-		 <td> <a href="https://ropa.mercadolibre.com.mx/calzado-tenis/mujer/_Deal_moda2#deal_print_id=75b36d00-cf4c-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=1&c_campaign=TENIS&c_uid=75b36d00-cf4c-11ec-ad0d-91ecf90b8fab"><img src="IMAGENES2/TENISM.jfif"class="imgtd9"></td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/bebes/_Deal_moda2#deal_print_id=16e7d900-cf4c-11ec-9c2e-c9e45840fef3&c_id=special-withoutlabel&c_element_order=3&c_campaign=BEBES_BANNER_KIDS&c_uid=16e7d900-cf4c-11ec-9c2e-c9e45840fef3"><img src="COMPRAS/BEBE.jfif" class="imgtd7"> </td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/calzado-tenis/hombre/vans_Tienda_all_NoIndex_True#deal_print_id=58f4dff0-cf4c-11ec-9c2e-c9e45840fef3&c_id=special-withoutlabel&c_element_order=1&c_campaign=VANS&c_uid=58f4dff0-cf4c-11ec-9c2e-c9e45840fef3"><img src="COMPRAS/TENISH.jfif"class="imgtd8"></td>
+		 <td> <a href="https://ropa.mercadolibre.com.mx/calzado-tenis/mujer/_Deal_moda2#deal_print_id=75b36d00-cf4c-11ec-ad0d-91ecf90b8fab&c_id=special-withoutlabel&c_element_order=1&c_campaign=TENIS&c_uid=75b36d00-cf4c-11ec-ad0d-91ecf90b8fab"><img src="COMPRAS/TENISM.jfif"class="imgtd9"></td>
 		 
 		 </tr>
 
@@ -68,7 +68,7 @@
     <div class="derecho">
 	<h2>Ubicacion del Lugar</h2>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14939.698453380848!2d-100.40234742956382!3d20.59113601673071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d35b2a918d2dc1%3A0x35673f825669f344!2sCentro%2C%20Santiago%20de%20Quer%C3%A9taro%2C%20Qro.!5e0!3m2!1ses-419!2smx!4v1651382688139!5m2!1ses-419!2smx" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-	<img src="IMAGENES2/Actividad de cierre.png" id="imgd">
+	<img src="IMG INDEX/Actividad de cierre.png" id="imgd">
 	<p>Nuestra pagina esta hecha para que las personas no contaminen el medio ambiente saliendo a comprar sus productos a las tiendas, por eso es que ofrecemos nuestro servicio de envio ya que esto ayuda a que los autos no contaminen tanto.</p> <br>
 	<video src="VIDEOS/x2 anuncios Spotify Premium (enero 2018)[1].mp4" controls></video>
 	</div>
@@ -78,7 +78,7 @@
 	
 	<div class="pie"> STORE ONLINE México y Centroamérica ©2022 | Todos los derechos reservados <br>
 	Siguenos en nuestras redes sociales
-	<a href="https://www.facebook.com/"><img src="IMAGENES2/facebook.png" class="img class3"> <br>
-	<a href="https://twitter.com/i/flow/login"><img src="IMAGENES2/twitter.png" class="img class4"></div>
+	<a href="https://www.facebook.com/"><img src="IMG INDEX/facebook.png" class="img class3"> <br>
+	<a href="https://twitter.com/i/flow/login"><img src="IMG INDEX/twitter.png" class="img class4"></div>
 	</body>
 	</html>
