--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	
     <div id="contenedor">
 	        <div id="cabecera">
-			  <img src="Evaluacionparcial1_LEON LOPEZ ERICK CRISTIAN_DiseñoVectorialResultado.png" id="imglogo">
+			  <img src="IMG INDEX/Evaluacionparcial1_LEON LOPEZ ERICK CRISTIAN_DiseñoVectorialResultado.png" id="imglogo">
 			  <h1> STORE ONLINE </h1>
 			</div>
 	<div id="alinear">
@@ -34,8 +34,8 @@
 			    <div class="cuerpo">
 				<h3>BIENVENDO A LA TIENDA</h3>
 				<p> NUESTRA TIENDA CUENTA CON MAS DE 10 MILLONES DE VENTAS, TAMBIEN TENEMOS LA MEJOR VALORACION EN EL MERCADO, TODAS SUS COMPRAS CUENTAN CON ENVIO GRATIS APARTE CONTAMOS CON GARANTIA, ESPERAMOS SER DE SU AGRADO.</P>
-			    <a href="compras.html"><img src="imge1.jfif" class="imgclass1"></a> <br>
-		        <a href="compras.html"><img src="imge2.jfif" class="imgclass2"></a> <br>
+			    <a href="compras.html"><img src="IMG INDEX/imge1.jfif" class="imgclass1"></a> <br>
+		        <a href="compras.html"><img src="IMG INDEX/imge2.jfif" class="imgclass2"></a> <br>
 				<center>
 				<video src="VIDEOS/Sport Wear Campaign   videos de ropa deportiva   CAMPANA[1].mp4" controls></video> <br>
 				</center>
@@ -43,7 +43,7 @@
     <div class="derecho">
 	<h2>Ubicacion del Lugar</h2>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14939.698453380848!2d-100.40234742956382!3d20.59113601673071!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d35b2a918d2dc1%3A0x35673f825669f344!2sCentro%2C%20Santiago%20de%20Quer%C3%A9taro%2C%20Qro.!5e0!3m2!1ses-419!2smx!4v1651382688139!5m2!1ses-419!2smx" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-	<img src="IMAGENES2/Actividad de cierre.png" id="imgd">
+	<img src="IMG INDEX/Actividad de cierre.png" id="imgd">
 	<p>Nuestra pagina esta hecha para que las personas no contaminen el medio ambiente saliendo a comprar sus productos a las tiendas, por eso es que ofrecemos nuestro servicio de envio ya que esto ayuda a que los autos no contaminen tanto.</p> <br>
 	<video src="VIDEOS/x2 anuncios Spotify Premium (enero 2018)[1].mp4" controls></video>
 	</div>
@@ -53,7 +53,7 @@
 	
 	<div class="pie"> STORE ONLINE México y Centroamérica ©2022 | Todos los derechos reservados <br>
 	Siguenos en nuestras redes sociales
-	<a href="https://www.facebook.com/"><img src="facebook.png" class="img class3"> <br>
-	<a href="https://twitter.com/i/flow/login"><img src="twitter.png" class="img class4"></div>
+	<a href="https://www.facebook.com/"><img src="IMG INDEX/facebook.png" class="img class3"> <br>
+	<a href="https://twitter.com/i/flow/login"><img src="IMG INDEX/twitter.png" class="img class4"></div>
 	</body>
 	</html>
