--- a/pagina4.html
+++ b/pagina4.html
@@ -120,18 +120,18 @@
 
         function cargarIconos() {
             iconos = [
-                '<img src="IMAGENES2/img1.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img2.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img3.png" width="100%" height="100%">',
-                '<img src="IMAGENES2/img4.png" width="100%" height="100%">',
-                '<img src="IMAGENES2/img5.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img6.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img7.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img8.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img9.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img10.png" width="100%" height="100%">',
-                '<img src="IMAGENES2/img11.jfif" width="100%" height="100%">',
-                '<img src="IMAGENES2/img12.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img1.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img2.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img3.png" width="100%" height="100%">',
+                '<img src="MEMORAMA/img4.png" width="100%" height="100%">',
+                '<img src="MEMORAMA/img5.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img6.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img7.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img8.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img9.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img10.png" width="100%" height="100%">',
+                '<img src="MEMORAMA/img11.jfif" width="100%" height="100%">',
+                '<img src="MEMORAMA/img12.jfif" width="100%" height="100%">',
             ]
         }
 
